--- a/Responsive-Web-Design-Projects/Survey Form/style.css
+++ b/Responsive-Web-Design-Projects/Survey Form/style.css
@@ -6,8 +6,38 @@
 }
 body {
   background-color: rgb(200, 250, 250);
+  text-align: center;
   margin: 0;
   font-size: 1.25rem;
   font-weight: 400;
   line-height: 1.25;
 }
+h1 {
+  color: goldenrod;
+  margin-bottom: 10px 15px;
+}
+
+h1 + p {
+  margin-top: 15px 10px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+button {
+  background-color: #05c46b;
+  border: 1px solid #05c46b;
+  border-radius: 2px;
+  font-family: inherit;
+  font-size: 16px;
+  display: block;
+  padding: 10px;
+  width: 100%;
