--- a/Responsive-Web-Design-Projects/Survey Form/style.css
+++ b/Responsive-Web-Design-Projects/Survey Form/style.css
@@ -1,43 +1,69 @@
-@import url("https://fonts.googleapis.com/css2?family=Recursive&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap");
 * {
-  font-family: "Recursive", sans-serif;
   box-sizing: border-box;
 }
 body {
-  background-color: rgb(200, 250, 250);
+  background-color: #25ccf7;
+  font-family: "Noto Sans KR", sans-serif;
   text-align: center;
   margin: 0;
-  font-size: 1.25rem;
-  font-weight: 400;
-  line-height: 1.25;
 }
+
 h1 {
-  color: goldenrod;
-  margin-bottom: 10px 15px;
+  margin-bottom: 0;
 }
 
 h1 + p {
-  margin-top: 15px 10px;
+  margin-top: 0;
 }
 
+form {
+  background-color: #fff;
+  box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.4);
+  border-radius: 30px;
+  padding: 30px 20px;
+  max-width: 450px;
+  margin: 40px auto;
+}
 
+.form-control {
+  margin-bottom: 20px;
+  text-align: left;
+}
 
+.form-control label {
+  display: block;
+  margin-bottom: 6px;
+}
 
+.form-control input,
+.form-control select,
+.form-control textarea {
+  border: 1px solid #777;
+  border-radius: 2px;
+  font-family: inherit;
+  padding: 10px;
+  display: block;
+  width: 100%;
+}
 
+.form-control select {
+  height: 20px;
+}
 
-
-
-
-
-
+.form-control input[type="radio"],
+.form-control input[type="checkbox"] {
+  display: inline-block;
+  width: auto;
+}
 
 button {
-  background-color: #05c46b;
-  border: 1px solid #05c46b;
-  border-radius: 2px;
+  background-color: #25ccf7;
+  border: 1px solid #25ccf7;
+  border-radius: 50px;
   font-family: inherit;
   font-size: 16px;
   display: block;
   padding: 10px;
   width: 100%;
+}
