--- a/Responsive-Web-Design-Projects/Product Landing Page/style.css
+++ b/Responsive-Web-Design-Projects/Product Landing Page/style.css
@@ -1,5 +1,10 @@
 /* Work in Progress */
 
+@import url("https://fonts.googleapis.com/css2?family=Galdeano&display=swap");
+
+* {
+  font-family: "Galdeano", sans-serif;
+}
 #header-img {
   width: 150px;
 }
@@ -10,4 +15,29 @@
 
 .flex-container {
   display: flex;
+}
+/* Media Query */
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  ...;
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  ...;
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  ...;
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  ...;
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  ...;
 }
