--- a/Responsive-Web-Design-Projects/Product Landing Page/style.css
+++ b/Responsive-Web-Design-Projects/Product Landing Page/style.css
@@ -5,14 +5,26 @@
 * {
   font-family: "Galdeano", sans-serif;
   box-sizing: border-box;
+  font-size: 32px;
+  font-weight: 600;
+  background: aliceblue;
+}
+h1 {
+  text-align: center;
+  font-size: 1.5;
 }
 section {
   padding-bottom: 20px;
   display: flex;
   justify-content: center;
+  width: 100%;
 }
 #header-img {
+  margin: 15px;
+  padding: 15px;
+  border-radius: 25%;
   width: 150px;
+  border: 20px blueviolet;
 }
 .nav-link {
   padding: 20px;
@@ -23,25 +35,19 @@ section {
   display: flex;
   justify-content: center;
 }
+#form {
+  display: inline-block;
+  margin: auto;
+}
+.form-class {
+  display: block;
+  text-align: center;
+}
 /* Media Query */
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
-  ...;
-}
-
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-  ...;
-}
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
-  ...;
-}
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
-  ...;
+  font-size: 0.5rem;
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
